fixed eventTest bug; added minified version

--- a/tests.html
+++ b/tests.html
@@ -59,7 +59,7 @@
 	</div>
 	
 	<!-- JavaScript Includes -->
-	<script type="text/javascript" charset="utf-8" src="events.js"></script>
+	<script type="text/javascript" charset="utf-8" src="events.min.js"></script>
 	<script type="text/javascript">
 	
 		var redDiv = document.getElementById('div1');
